# adns

./: LICENSE  dns_update.py  dns_updater.conf  named.conf
resolver/: Cargo.toml  README  config.json
resolver/src/: main.rs
resolver/unit/: test.rs
