[package]
name = "adns-resolver"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Delignat-Lavaud <antdl@microsoft.com>"]
description = "Attested DNS Resolver with DNS over HTTPS support"
readme = "README.md"
license = "MIT"

[dependencies]
# DNS libraries
hickory-resolver = { version = "0.24.0", features = ["dnssec"] }
hickory-server = "0.24.0"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# HTTP server for DNS over HTTPS
warp = { version = "0.3.6", features = ["tls"] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.48"

# Crypto and encoding
base64 = "0.21.4"
bytes = "1.5.0"
x509-parser = "0.15.1"

# Configuration
config = "0.13.3"

# Utilities
lazy_static = "1.4.0"
dashmap = "5.5.3"
futures = "0.3.28"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
